--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,6 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies>
-
-	</dependencies>
 
 	<build>
 		<plugins>
@@ -38,6 +35,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
+	<scm>
+		<developerConnection>scm:git:https://github.com/koontzrl/sfg-pet-clinic.git</developerConnection>
+	</scm>
 </project>
